<resources>
    <string name="app_name">Smart Client</string>
    <string name="button">Reload</string>
    <string name="button3">Exit</string>
    <string name="buttonLogin">Login</string>
    <string name="header2page">Header</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="server_ip">Server IP</string>
    <string name="back">Back</string>
    <string name="smart_home">Smart Client</string>
    <string name="by_retechgroup">by RetechGroup</string>
    <string name="home">home</string>
    <string name="title_activity_test">test</string>
    <string name="status">Status:</string>
    <string name="password">Password</string>
    <string name="version_alpha_3">Version Alpha 1</string>
</resources>
