<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="#464545"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Main">

    <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="154dp"
            android:layout_marginLeft="154dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="156dp"
            android:layout_marginRight="156dp"
            android:contentDescription="@string/home"
            app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
            android:id="@+id/textReteh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/by_retechgroup"
            android:textColor="#BAAFAF"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="353dp" />

    <TextView
            android:id="@+id/textReteh2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="62dp"
            android:gravity="center"
            android:text="@string/version_alpha_3"
            android:textColor="#BAAFAF"
            android:textSize="18sp" />

    <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/smart_home"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="391dp" />

    <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="183dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="293dp"
            android:padding="6dp" />

</RelativeLayout>