<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ffffff"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main">


    <TextView
            android:id="@+id/status"
            android:layout_width="192dp"
            android:layout_height="25dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="116dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/textView11"
            android:layout_width="92dp"
            android:layout_height="44dp"
            android:layout_marginTop="40dp"
            android:text="@string/server_ip"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView12"
            android:layout_width="87dp"
            android:layout_height="43dp"
            android:layout_marginTop="124dp"
            android:text="Login"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView13"
            android:layout_width="104dp"
            android:layout_height="37dp"
            android:layout_marginTop="208dp"
            android:text="Password"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/Password"
            android:layout_width="198dp"
            android:layout_height="40dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="72dp"
            android:autofillHints="password..."
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginRight="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/Login"
            android:layout_width="198dp"
            android:layout_height="40dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="72dp"
            android:autofillHints="login..."
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginRight="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/serverIP"
            android:layout_width="198dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:autofillHints="192.168..."
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginRight="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="52dp"
            android:onClick="login"
            android:text="@string/buttonLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginEnd="176dp"
            android:layout_marginRight="176dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:onClick="exitApp"
            android:text="@string/button3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.767"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/Debug"
            android:layout_width="369dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="276dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>